@@ -7,4 +7,3 @@
 #define HWLOC_PORT_FREEBSD_PTHREAD_H
 
 #endif /* HWLOC_PORT_FREEBSD_PTHREAD_H */
-
